Update restaurant homepage content and menu structure

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
             <a href="#home">Início</a>
             <a href="#reserva">Reserva</a>
             <a href="#delivery">Delivery</a>
-            <a href="#features">Lançamentos</a>
-            <a href="#pricing">Cardápio</a>
+            <a href="cardapio.html">Cardápio</a>  <!-- Alterado de #features para cardapio.html -->
             <a href="#trainers">Chefs</a>
             <a href="#feedback">Feedbacks</a>
             <a href="#blogs">Blogs</a>
@@ -137,9 +136,9 @@
         </section>
         <!-- ========== FIM SEÇÃO DELIVERY ========== -->
 
-        <!-- ========== SEÇÃO LANÇAMENTOS ========== -->
-        <section id="features" class="features">
-            <h1 class="heading"> <span>Laçamentos</span> </h1>
+        <!-- ========== SEÇÃO CARDÁPIO ========== -->
+        <section id="cardapio" class="features">
+            <h1 class="heading"> <span>Cardápio</span> </h1>
 
             <div class="box-container">
                 <div class="box">
@@ -150,7 +149,7 @@
                         <img src="images/dining.png" alt="">
                         <h3>Entradas</h3>
                         <p>Experimente nossos bolinhos de bacalhau artesanais com toque especial do chefe.</p>
-                        <a href="#" class="btn">Ler Mais</a>
+                        <a href="cardapio.html" class="btn">Ver Cardápio Completo</a>  <!-- Alterado para linkar com cardapio.html -->
                     </div>
                 </div>
 
@@ -162,7 +161,7 @@
                         <img src="images/food.png" alt="">
                         <h3>Pratos Principais</h3>
                         <p>Moqueca de peixe com tempero baiano e acompanhamentos irresistíveis.</p>
-                        <a href="#" class="btn">Ler Mais</a>
+                        <a href="cardapio.html" class="btn">Ver Cardápio Completo</a>  <!-- Alterado para linkar com cardapio.html -->
                     </div>
                 </div>
 
@@ -174,12 +173,12 @@
                         <img src="images/dessert.png" alt="">
                         <h3>Sobremessas</h3>
                         <p>Mousse de maracujá e calda de frutas tropicais.</p>
-                        <a href="#" class="btn">Ler Mais</a>
+                        <a href="cardapio.html" class="btn">Ver Cardápio Completo</a>  <!-- Alterado para linkar com cardapio.html -->
                     </div>
                 </div>
             </div>
         </section>
-        <!-- ========== FIM SEÇÃO LANÇAMENTOS ========== -->
+        <!-- ========== FIM SEÇÃO CARDÁPIO ========== -->
 
         <!-- ========== SEÇÃO CHEFS ========== -->
         <section id="trainers" class="trainers">
@@ -366,8 +365,7 @@
                 <a class="links" href="#home">Início</a>
                 <a class="links" href="#reserva">Reserva</a>
                 <a class="links" href="#delivery">Delivery</a>
-                <a class="links" href="#features">Lançamentos</a>
-                <a class="links" href="#pricing">Cardápio</a>
+                <a class="links" href="cardapio.html">Cardápio</a>  <!-- Alterado de #features para cardapio.html -->
                 <a class="links" href="#trainers">Chefs</a>
                 <a class="links" href="#feedback">Feedbacks</a>
                 <a class="links" href="#blogs">blogs</a>
