Continue restaurant frontend optimization: refine styles and navigation

--- a/cardapio.html
+++ b/cardapio.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cardápio - Maré Alta</title>
-  <link rel="stylesheet" href="styles_cardapio.css">
+  <title>Cardápio - LobSter</title>
+  <link rel="stylesheet" href="styles-cardapio.css">
 </head>
 <body>
 
   <header>
-    <img src="images/redlobster.png" alt="Logo Red Lobster" class="logo">
-    <p>Sabores frescos do oceano direto para sua mesa</p>
+    <a href="index.html" class="logo"><span>Lob</span>Ster</a>
+    <nav>
+      <ul class="menu">
+        <li><a href="index.html">Início</a></li>
+      </ul>
+    </nav>
   </header>
 
 <section class="menu-section">
@@ -88,9 +92,8 @@
   </div>
 </section>
 
-
 <footer>
-  <p>&copy; 2025 Restaurante Maré Alta. Todos os direitos reservados.</p>
+  <p>&copy; 2025 LobSter. Todos os direitos reservados.</p>
 </footer>
 
 </body>
