--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="#home">Início</a>
             <a href="#reserva">Reserva</a>
             <a href="#delivery">Delivery</a>
-            <a href="cardapio.html">Cardápio</a>  <!-- Alterado de #features para cardapio.html -->
+            <a href="#cardapio">Cardápio</a>  
             <a href="#trainers">Chefs</a>
             <a href="#feedback">Feedbacks</a>
             <a href="#blogs">Blogs</a>
@@ -68,7 +68,7 @@
         <section id="reserva" class="about">
             <div class="image">
                 <img src="images/reserva.png" alt="@?!">
-                <a href="#" class="btn">Reserva</a>
+                <a href="Reserva.html"></a>
             </div>
 
             <div class="content">
@@ -95,7 +95,7 @@
                         <p>Reserve para jantares românticos ou celebrações</p>
                     </div>
                 </div>
-                <a href="#" class="btn">Reservar Agora</a>
+                <a href="Reserva.html" class="btn">Reservar Agora</a>
             </div>
         </section>
         <!-- ========== FIM SEÇÃO RESERVA ========== -->
@@ -104,7 +104,7 @@
         <section id="delivery" class="about">
             <div class="image">
                 <img src="images/delivery.png" alt="">
-                <a href="#" class="btn">Delivery</a>
+                <a href="Delivery.html"></a>
             </div>
 
             <div class="content">
@@ -131,7 +131,7 @@
                         <p>De moquecas a camarões grelhados — você escolhe</p>
                     </div>
                 </div>
-                <a href="#" class="btn">Pedir Agora</a>
+                <a href="Delivery.html" class="btn">Pedir Agora</a>
             </div>
         </section>
         <!-- ========== FIM SEÇÃO DELIVERY ========== -->
@@ -149,7 +149,7 @@
                         <img src="images/dining.png" alt="">
                         <h3>Entradas</h3>
                         <p>Experimente nossos bolinhos de bacalhau artesanais com toque especial do chefe.</p>
-                        <a href="cardapio.html" class="btn">Ver Cardápio Completo</a>  <!-- Alterado para linkar com cardapio.html -->
+                        <a href="cardapio.html" class="btn">Ver Cardápio Completo</a>  
                     </div>
                 </div>
 
@@ -161,7 +161,7 @@
                         <img src="images/food.png" alt="">
                         <h3>Pratos Principais</h3>
                         <p>Moqueca de peixe com tempero baiano e acompanhamentos irresistíveis.</p>
-                        <a href="cardapio.html" class="btn">Ver Cardápio Completo</a>  <!-- Alterado para linkar com cardapio.html -->
+                        <a href="cardapio.html" class="btn">Ver Cardápio Completo</a> 
                     </div>
                 </div>
 
@@ -173,7 +173,7 @@
                         <img src="images/dessert.png" alt="">
                         <h3>Sobremessas</h3>
                         <p>Mousse de maracujá e calda de frutas tropicais.</p>
-                        <a href="cardapio.html" class="btn">Ver Cardápio Completo</a>  <!-- Alterado para linkar com cardapio.html -->
+                        <a href="cardapio.html" class="btn">Ver Cardápio Completo</a>  
                     </div>
                 </div>
             </div>
@@ -365,7 +365,7 @@
                 <a class="links" href="#home">Início</a>
                 <a class="links" href="#reserva">Reserva</a>
                 <a class="links" href="#delivery">Delivery</a>
-                <a class="links" href="cardapio.html">Cardápio</a>  <!-- Alterado de #features para cardapio.html -->
+                <a class="links" href="cardapio.html">Cardápio</a>  
                 <a class="links" href="#trainers">Chefs</a>
                 <a class="links" href="#feedback">Feedbacks</a>
                 <a class="links" href="#blogs">blogs</a>
